--- a/argocd/argo-application.yaml
+++ b/argocd/argo-application.yaml
@@ -1,18 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd-ingress
-  namespace: argocd
+  name: ingress-for-argocd
 spec:
-  project: default
-  source:
-    repoURL: 'https://github.com/sajat-repod.git'
-    targetRevision: main
-    path: apps/argocd
   destination:
-    server: https://kubernetes.default.svc
     namespace: argocd
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    server: https://kubernetes.default.svc
+  source:
+    path: argocd/ingress-nginx
+    repoURL: https://github.com/SzaDav188/Apps.git
+    targetRevision: HEAD
+  sources: []
+  project: default
