provice email for certmanager

--- a/gitlab/gitlab/charts/certmanager-issuer/values.yaml
+++ b/gitlab/gitlab/charts/certmanager-issuer/values.yaml
@@ -2,7 +2,7 @@
 server: https://acme-v02.api.letsencrypt.org/directory
 
 # Provide an email to associate with your TLS certificates
-# email:
+email: szabo.david188@gmail.com
 
 rbac:
   create: true
