--- a/gitlab/gitlab/charts/postgresql/values.yaml
+++ b/gitlab/gitlab/charts/postgresql/values.yaml
@@ -517,7 +517,7 @@ metrics:
   image:
     registry: docker.io
     repository: bitnami/postgres-exporter
-    tag: 0.8.0-debian-10-r99
+    tag: latest
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
     ## Secrets must be manually created in the namespace.
