--- a/gitlab/gitlab/charts/postgresql/values.yaml
+++ b/gitlab/gitlab/charts/postgresql/values.yaml
@@ -13,8 +13,8 @@ global:
 ## ref: https://hub.docker.com/r/bitnami/postgresql/tags/
 ##
 image:
-  registry: docker.io
-  repository: bitnami/postgresql
+  registry: hub.docker.com
+  repository: hub.docker.com/_postgres
   tag: postgres:16
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
