--- a/gitlab/gitlab/charts/postgresql/values-production.yaml
+++ b/gitlab/gitlab/charts/postgresql/values-production.yaml
@@ -474,7 +474,7 @@ readinessProbe:
 ## Configure metrics exporter
 ##
 metrics:
-  enabled: true
+  enabled: false
   # resources: {}
   service:
     type: ClusterIP
