--- a/gitlab/gitlab/charts/postgresql/values.yaml
+++ b/gitlab/gitlab/charts/postgresql/values.yaml
@@ -14,7 +14,7 @@ global:
 ##
 image:
   registry: docker.io
-  repository: bitnami/postgres
+  repository: bitnami/postgresql
   tag: 16-bookworm
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
