--- a/gitlab/gitlab/values.yaml
+++ b/gitlab/gitlab/values.yaml
@@ -919,7 +919,7 @@ postgresql:
   install: true
   postgresqlDatabase: gitlabhq_production
   image:
-    tag: sha256:54e5e67a7cf4dd4df13b9f8da7bb62ca0995542f4d8d6805fa1d5933e8aa5490
+    tag: postgres:latest
   usePasswordFile: true
   existingSecret: 'bogus'
   initdbScriptsConfigMap: 'bogus'
