move cert-manager

--- a/Grafana/applications/applicaton.yaml
+++ b/Grafana/applications/applicaton.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gitlab
-  namespace: grafana
+  name: grafana
+  namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/SzaDav188/Apps.git
     targetRevision: HEAD
-    path: grafana
+    path: Grafana
   destination:
     server: https://kubernetes.default.svc
     namespace: grafana
